force-app/main/default/objects/Notification__c/Notification__c.object-meta.xml
<CustomObject>
    <label>Notification</label>
    <nameField>
        <displayFormat>N-{0000}</displayFormat>
        <label>Notification Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Notification</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>