force-app/main/default/objects/Notification__c/fields/For_All__c.field-meta.xml
<CustomField>
    <fullName>For_All__c</fullName>
    <defaultValue>false</defaultValue>
    <label>For All</label>
    <type>Checkbox</type>
</CustomField>