force-app/main/default/objects/Notification__c/fields/Reviewer__c.field-meta.xml
<CustomField>
    <fullName>Reviewer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Reviewer</label>
    <referenceTo>Reviewer__c</referenceTo>
    <relationshipLabel>Notification</relationshipLabel>
    <relationshipName>Notification</relationshipName>
    <type>Lookup</type>
</CustomField>