force-app/main/default/objects/Notification__c/fields/Reviewer_Mapping__c.field-meta.xml
<CustomField>
    <fullName>Reviewer_Mapping__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Reviewer Mapping</label>
    <referenceTo>Reviewer_Mapping__c</referenceTo>
    <relationshipLabel>Notification</relationshipLabel>
    <relationshipName>Notification</relationshipName>
    <type>Lookup</type>
</CustomField>