force-app/main/default/objects/Notification__c/fields/Yearly_Schemes__c.field-meta.xml
<CustomField>
    <fullName>Yearly_Schemes__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Yearly Scheme</label>
    <referenceTo>Yearly_Schemes__c</referenceTo>
    <relationshipLabel>Notification</relationshipLabel>
    <relationshipName>Notification</relationshipName>
    <type>Lookup</type>
</CustomField>