force-app/main/default/objects/Notification__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Contact__c</columns>
    <columns>Expiry_Date__c</columns>
    <columns>Title__c</columns>
    <columns>For_All__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>